<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.CityLookupFragment"
    android:background="?background">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_city_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/city_name"
        android:textColorHint="@color/black"
        android:textAlignment="center"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_lookup"
        android:layout_width="0dp"
        android:layout_height="65dp"
        app:layout_constraintStart_toStartOf="@id/et_city_name"
        app:layout_constraintEnd_toEndOf="@id/et_city_name"
        app:layout_constraintTop_toBottomOf="@id/et_city_name"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/grey"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        app:cornerRadius="10dp"
        android:text="@string/lookup"
        android:textColor="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>